@@ -1,0 +1,26 @@
+Feel free to hack Gaphor. Patches are welcome.
+
+Structure
+=========
+
+Gaphor contains the following modules:
+
+UML
+---
+The UML module contains the UML 2.0 data model. This part is
+quite stable and it is unlikely that code has to be changed
+here.
+
+diagram
+-------
+The diagram module contains items that can be placed in diagrams.
+In most cases the classes NamedItem and Relationship can serve
+as bases for your class.
+
+ui
+--
+The user interface. This is where most of the work is.
+
+misc
+----
+Some utility stuff, such as Actions and aspects are put in here.
