@@ -1,6 +1,9 @@
 Gaphor capabilities
 ~~~~~~~~~~~~~~~~~~~
 
+DEPRICATED. In stead of capabilities, we use Actions now (gaphor.misc.action)
+which can have dependencies to each other.
+
 One nice feature of user interfaces is the ability to disable options that
 don't do anything useful in a specific context. For example: it's useles to
 enable a 'undo' button when there's no information to undo.
