@@ -52,12 +52,10 @@ class PlacementTool(diacanvas.PlacementTool):
         return diacanvas.PlacementTool.do_button_press_event(self, view, event)
 
     def do_button_release_event(self, view, event):
-        view.set_tool(None)
         self.is_released = True
         view.set_tool(None)
         #print 'Gaphor: do_button_release_event: %s' % self.__dict__
-        #return diacanvas.PlacementTool.do_button_release_event(self, view, event)
-        return False
+        return diacanvas.PlacementTool.do_button_release_event(self, view, event)
 
-#gobject.type_register(PlacementTool)
+gobject.type_register(PlacementTool)
 
